# repro

./: .gitignore  README.md
.claude/skills/repro/: SKILL.md
.claude/skills/repro-description/: SKILL.md
sentry-java/4400/: .gitignore  README.md  settings.gradle.kts
sentry-java/4400/app/: build.gradle.kts  proguard-rules.pro
sentry-java/4400/app/src/main/: AndroidManifest.xml
sentry-javascript/18962/: README.md  index.js  instrument.mjs  package.json
sentry-javascript/18962/src/: app.module.ts  instrument.ts  main.ts  stream.controller.ts
sentry-javascript/19013/: README.md  index.ts  instrument.js  package.json  test-requests.ts
sentry-javascript/19014/: README.md  index.js  package-lock.json  package.json
sentry-php/1999/: README.md  composer.json  reproduce.php
sentry-python/5274/: .gitignore  README.md  asgi.py  pyproject.toml  settings.py  urls.py
sentry-python/5349/: README.md  main.py  pyproject.toml
sentry-react-native/5561/: App.tsx  README.md  app.json  metro.config.js  package.json
sentry-ruby/2813/: Gemfile  README.md  config.ru  puma_config.rb  simulate_queue.rb  validate.sh
sentry-ruby/2842/: Gemfile  README.md
sentry-ruby/2842/app/controllers/: application_controller.rb  test_controller.rb
sentry-ruby/2842/config/: application.rb  routes.rb
sentry-ruby/2842/config/initializers/: sentry.rb
sentry-ruby/error-page-status-mismatch/: Gemfile  README.md  app.rb
sentry-ruby/error-page-status-mismatch/public/: 404.html
sentry-rust/946/: Cargo.toml  README.md
sentry-rust/946/src/: main.rs
(+6 files in other folders)
