[project]
name = "repro-sentry-python-5349"
version = "0.1.0"
description = "Reproduction for sentry-python#5349 - Missing instrumentation for requests lib calls"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "requests>=2.32.0",
    "sentry-sdk[fastapi]>=2.49.0",
]

[dependency-groups]
dev = []
